--- a/.github/workflows/bosh-stop.yml
+++ b/.github/workflows/bosh-stop.yml
@@ -4,15 +4,18 @@ on:
   workflow_dispatch: { }
 
 jobs:
-  bosh-cli-job:
+  bosh-stop:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Install BOSH CLI
         run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
+          sudo apt-get -q update
+          sudo apt-get install -yq jq
           wget -q https://github.com/cloudfoundry/bosh-cli/releases/download/v7.6.1/bosh-cli-7.6.1-darwin-amd64
           chmod +x bosh-cli-7.6.1-darwin-amd64
           sudo mv bosh-cli-7.6.1-darwin-amd64 /usr/local/bin/bosh
