--- a/.github/workflows/bosh-stop.yml
+++ b/.github/workflows/bosh-stop.yml
@@ -45,7 +45,22 @@ jobs:
           host *
             StrictHostKeyChecking no
           EOF
-      - name: Run bosh vms
+      - name: Run bosh deployments
         run: |
-          bosh -v
-          bosh vms
+          bosh deployments --json | jq -r '.Tables[0].Rows[].name' > deployments.txt
+      - name: Stop postgres
+        run: |
+          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^postgres-')
+          bosh stop --hard ${DEPLOYMENT_NAME}
+      - name: Stop p-healthwatch2-pas-exporter
+        run: |
+          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2-pas-exporter')
+          bosh stop --hard ${DEPLOYMENT_NAME}
+      - name: Stop p-healthwatch2
+        run: |
+          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2' | grep -Ev '^p-healthwatch2-pas'
+          bosh stop --hard ${DEPLOYMENT_NAME}
+      - name: Stop cf
+        run: |
+          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^cf-')
+          bosh stop --hard ${DEPLOYMENT_NAME}
