--- a/.github/workflows/bosh-start.yml
+++ b/.github/workflows/bosh-start.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch: { }
 
 jobs:
-  bosh-stop:
+  bosh-start:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
