--- a/.github/workflows/bosh-start.yml
+++ b/.github/workflows/bosh-start.yml
@@ -10,58 +10,65 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Install BOSH CLI
-        run: ./install-bosh.sh
-      - name: Import Secrets
-        id: secrets
-        uses: hashicorp/vault-action@v3.0.0
-        with:
-          exportToken: true
-          exportEnv: true
-          method: jwt
-          url: ${{ secrets.VAULT_ADDR }}
-          role: cicd
-          secrets: |
-            kv/data/cicd/bosh environment | BOSH_ENVIRONMENT ;
-            kv/data/cicd/bosh client | BOSH_CLIENT ;
-            kv/data/cicd/bosh client_secret | BOSH_CLIENT_SECRET ;
-            kv/data/cicd/bosh ca_cert | BOSH_CA_CERT ;   
-            kv/data/cicd/bosh all_proxy | BOSH_ALL_PROXY ;  
-            kv/data/cicd/bosh private_key | PRIVATE_KEY ;   
-      - name: Set up BOSH environment variables
-        run: ./setup-ssh.sh
-      - name: Run bosh deployments
-        run: |
-          bosh deployments --json | jq -r '.Tables[0].Rows[].name' > deployments.txt
-      - name: Start cf
-        run: |
-          source retryable.sh
-          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^cf-')
-          retryable bosh start -d ${DEPLOYMENT_NAME} -n
-      - name: Start service instances
-        run: |
-          source retryable.sh
-          for DEPLOYMENT_NAME in $(cat deployments.txt | grep -E '^service-instance'); do
-            retryable bosh start -d ${DEPLOYMENT_NAME} -n;
-          done
-      - name: Start postgres service broker
-        run: |
-          source retryable.sh
-          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^postgres-')
-          retryable bosh start -d ${DEPLOYMENT_NAME} -n
-      - name: Start p-healthwatch2
-        run: |
-          source retryable.sh
-          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2' | grep -Ev '^p-healthwatch2-pas')
-          retryable bosh start -d ${DEPLOYMENT_NAME} -n
-      - name: Start p-healthwatch2-pas-exporter
-        run: |
-          source retryable.sh
-          DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2-pas-exporter')
-          retryable bosh start -d ${DEPLOYMENT_NAME} -n
-      - name: Revoke token
-        if: always()
-        run: |
-          curl -X POST -s -H "X-Vault-Token: ${VAULT_TOKEN}" ${{ secrets.VAULT_ADDR }}/v1/auth/token/revoke-self || true
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Install BOSH CLI
+      run: ./install-bosh.sh
+    - name: Import Secrets
+      id: secrets
+      uses: hashicorp/vault-action@v3.0.0
+      with:
+        exportToken: true
+        exportEnv: true
+        method: jwt
+        url: ${{ secrets.VAULT_ADDR }}
+        role: cicd
+        secrets: |
+          kv/data/cicd/bosh environment | BOSH_ENVIRONMENT ;
+          kv/data/cicd/bosh client | BOSH_CLIENT ;
+          kv/data/cicd/bosh client_secret | BOSH_CLIENT_SECRET ;
+          kv/data/cicd/bosh ca_cert | BOSH_CA_CERT ;
+          kv/data/cicd/bosh all_proxy | BOSH_ALL_PROXY ;
+          kv/data/cicd/bosh private_key | PRIVATE_KEY ;
+          kv/data/cicd/bosh google_chat_webhook_url | WEBHOOK_URL ;
+    - name: Set up BOSH environment variables
+      run: ./setup-ssh.sh
+    - name: Run bosh deployments
+      run: |
+        bosh deployments --json | jq -r '.Tables[0].Rows[].name' > deployments.txt
+    - name: Start cf
+      run: |
+        source retryable.sh
+        DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^cf-')
+        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+    - name: Start service instances
+      run: |
+        source retryable.sh
+        for DEPLOYMENT_NAME in $(cat deployments.txt | grep -E '^service-instance'); do
+          retryable bosh start -d ${DEPLOYMENT_NAME} -n;
+        done
+    - name: Start postgres service broker
+      run: |
+        source retryable.sh
+        DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^postgres-')
+        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+    - name: Start p-healthwatch2
+      run: |
+        source retryable.sh
+        DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2' | grep -Ev '^p-healthwatch2-pas')
+        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+    - name: Start p-healthwatch2-pas-exporter
+      run: |
+        source retryable.sh
+        DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2-pas-exporter')
+        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+    - name: Send Notification
+      uses: ./.github/actions/send-notification
+      if: always()
+      with:
+        webhook-url: ${{ env.WEBHOOK_URL }}
+        status: ${{ job.status }}
+    - name: Revoke token
+      if: always()
+      run: |
+        curl -X POST -s -H "X-Vault-Token: ${VAULT_TOKEN}" ${{ secrets.VAULT_ADDR }}/v1/auth/token/revoke-self || true
