--- a/.github/workflows/bosh-stop.yml
+++ b/.github/workflows/bosh-stop.yml
@@ -3,8 +3,8 @@ name: Run BOSH Stop
 on:
   workflow_dispatch: { }
   schedule:
-  # 22:00 JST on Fridays
-  - cron: '00 13 * * 5'
+  # 22:00 JST on Weekdays
+  - cron: '00 13 * * 1-5'
 jobs:
   bosh-stop:
     runs-on: ubuntu-latest
