--- a/.github/workflows/bosh-start.yml
+++ b/.github/workflows/bosh-start.yml
@@ -40,30 +40,25 @@ jobs:
         bosh deployments --json | jq -r '.Tables[0].Rows[].name' > deployments.txt
     - name: Start cf
       run: |
-        source retryable.sh
         DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^cf-')
-        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+        bosh start -d ${DEPLOYMENT_NAME} -n
     - name: Start service instances
       run: |
-        source retryable.sh
         for DEPLOYMENT_NAME in $(cat deployments.txt | grep -E '^service-instance'); do
-          retryable bosh start -d ${DEPLOYMENT_NAME} -n;
+          bosh start -d ${DEPLOYMENT_NAME} -n;
         done
     - name: Start postgres service broker
       run: |
-        source retryable.sh
         DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^postgres-')
-        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+        bosh start -d ${DEPLOYMENT_NAME} -n
     - name: Start p-healthwatch2
       run: |
-        source retryable.sh
         DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2' | grep -Ev '^p-healthwatch2-pas')
-        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+        bosh start -d ${DEPLOYMENT_NAME} -n
     - name: Start p-healthwatch2-pas-exporter
       run: |
-        source retryable.sh
         DEPLOYMENT_NAME=$(cat deployments.txt | grep -E '^p-healthwatch2-pas-exporter')
-        retryable bosh start -d ${DEPLOYMENT_NAME} -n
+        bosh start -d ${DEPLOYMENT_NAME} -n
     - name: Google Chat Notification
       if: always()
       uses: Co-qn/google-chat-notification@releases/v1
