--- a/.github/workflows/bosh-stop.yml
+++ b/.github/workflows/bosh-stop.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch: { }
   schedule:
   # 18:00 JST on Weekdays
-  - cron: '00 9 * * 1-5'
+  # - cron: '00 9 * * 1-5'
 jobs:
   bosh-stop:
     runs-on: ubuntu-latest
